# Renderer

./: README.md
code/Part1/lib/: GraphicsLibrary.cpp
code/Part1/lib/include/: GraphicsLibrary.h
code/Part1/src/chapter1/: CMakeLists.txt  main.cpp
code/Part1/src/chapter2/DrawLine/: CMakeLists.txt  main.cpp
code/Part1/src/chapter2/DrawTriangle/: CMakeLists.txt  main.cpp
code/Part1/src/chapter3/MultipleIenterpolation/: CMakeLists.txt  main.cpp
code/Part1/src/chapter3/SingIenterpolation/: CMakeLists.txt  main.cpp
code/Part1/src/chapter3/texture/: CMakeLists.txt  main.cpp
code/Part2/src/chapter5/Perspective_Correct_Interpolation/: CMakeLists.txt  main.cpp
code/exercise/model/: 说明.txt
code/part3/src/chapter9/: CMakeLists.txt  main.cpp
code/platform/Linux/: GraphicsDevice.cpp
code/platform/Linux/include/: GraphicsDevice.h
code/platform/Windows/: GraphicsDevice.cpp
code/platform/Windows/include/: GraphicsDevice.h
old/: .gitignore  README.md  Renderer.sln
old/Renderer/: Edge.cpp  Edge.h  Graphics.cpp  Graphics.h  Matrix.cpp  Matrix.h  Matrix4.cpp  Matrix4.h  Point2.cpp  Point2.h  Point3.cpp  Point3.h  Point4.cpp  Point4.h  Renderer.vcxproj  Renderer.vcxproj.filters  Vector.cpp  Vector.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h  main.cpp
old/document/PDF/: 未完成章节.txt
old/note/: CVV裁剪说明.docx
wasm/: GraphicsDevice.cpp  GraphicsLibrary.cpp  Matrix.cpp  main.cpp  使用方法.txt
wasm/include/: GraphicsDevice.h  GraphicsLibrary.h
wasm_test/: a.out.data  a.out.js  a.out.wasm  index.html
(+126 files in other folders)
